# Robot-2015

./: .cproject  .gitignore  .gitreview  .project  .styleguide  AutonContainer.inl  ButtonTracker.cpp  CMakeLists.txt  COPYING  DriverStationDisplay.cpp  DriverStationDisplay.hpp  DriverStationDisplay.inl  GUISettings.txt  Insight.cpp  LICENSE.txt  README.md  Robot.cpp  RobotSettings.txt  Settings.cpp  Settings.hpp  build.gradle  deploy.sh  fix-spacing.sh  format-code.sh  format.py  send-robot-settings.sh  uncrustify.cfg
AutonomousModes/: AutonMotionProfile.cpp  DriveForwardAuton.cpp  NoopAuton.cpp  RightLeftAuton.cpp  SideAuton.cpp
LiveGrapherHost/: GraphHost.cpp  GraphHost.hpp  graphhost.cpp  graphhost.hpp  graphhost.md  graphtest.cpp
Logging/: LogConsoleSink.cpp  LogConsoleSink.h  LogEvent.cpp  LogFileSink.cpp  LogServerSink.cpp  LogServerSink.h  LogSinkBase.cpp  LogSinkBase.h  LogStreambuf.cpp  LogStreambuf.h  Logger.cpp  Logger.h  SetLogLevel.cpp  SetLogLevel.h
MotionProfile/: TrapezoidProfile.cpp  TrapezoidProfile.hpp
SFMLNetwork/: IpAddress.cpp  Packet.cpp  Socket.cpp  SocketSelector.cpp  TcpListener.cpp  TcpSocket.cpp  UdpSocket.cpp
Subsystems/: DriveTrain.hpp  DriveTrain.inl  GearBox.inl
src/: AutonContainer.cpp  AutonContainer.hpp  AutonContainer.inl  ButtonTracker.cpp  ButtonTracker.hpp  DSDisplay.cpp  DSDisplay.hpp  DSDisplay.inl  DriverStationDisplay.cpp  DriverStationDisplay.hpp  DriverStationDisplay.inl  Insight.cpp  Insight.hpp  Robot.cpp  Robot.hpp  RollingAverage.hpp  RollingAverage.inl  Settings.cpp  Settings.hpp  State.cpp  State.hpp  (+3 more)
(+123 files in other folders)
